# jupyter-in-container

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
base/: Dockerfile  Makefile  README.md  build.sh  docker-compose.yml
base/notebooks/: README.md  openai_gym.ipynb
code-server/: Dockerfile  Makefile  README.md  docker-compose.yml
code-server/src/: README.md
code-server/src/rasterio-demo/: Makefile  README.md  pyproject.toml
code-server/src/rasterio-demo/notebook/: rio-demo.ipynb
code-server/vscode/: keybindings.json  settings.json
cpp/: Dockerfile  Makefile  README.md  docker-compose.yml
cpp/notebooks/: cpp11-demo.ipynb  cpp14-demo.ipynb  cpp17-demo.ipynb
docs/: gdal.md
gdal-rasterio/: Dockerfile  README.md  docker-compose.yml
gdal-rasterio/notebooks/: README.md  gdal_rasterio_check.ipynb
gis/gdal-alpine/: Dockerfile  Makefile  README.md  docker-compose.yml
gis/gdal-debian/: Dockerfile  Makefile  README.md  docker-compose.yml
gis/gdal-ubuntu/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
gis/resterio/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
julia/: Dockerfile  Makefile  README.md  docker-compose.yml
julia/notebooks/: test-julia.ipynb
python/miniconda/: Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml
python/pip/: Dockerfile  Makefile  README.md  docker-compose.yml  run-jupyterlab.sh
python/poetry/src/: pyproject.toml
python/poetry/src/notebooks/: test.ipynb
xeus-cling/: Dockerfile  README.md
(+9 files in other folders)
